CAD images of wheel and box

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,20 @@
 /HW4/SPI/dist/
 /HW4/build/
 /HW4/dist/
+/HW5/dist/
+/HW5/build/
+/HW6/HW6.X/dist/
+/HW6/HW6.X/build/
+/HW7/HW7.X/build/
+/HW7/HW7.X/dist/
+/HW8/Harmony_First_Project/firmware/Harmony_First_Project.X/build/
+/HW8/Harmony_First_Project/firmware/Harmony_First_Project.X/dist/
+/HW9/dist/
+/HW9/build/
+/HW10/HW10/firmware/HW10.X/dist/
+/HW10/HW10/firmware/HW10.X/build/
+/HW10/firmware/HW10.X/dist/
+/HW10/firmware/HW10.X/build/
+/HW10_2/firmware/HW10_2.X/build/
+/HW12/firmware/HW12.X/build/
+/HW12/firmware/HW12.X/dist/
