--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@
 /HW10_2/firmware/HW10_2.X/build/
 /HW12/firmware/HW12.X/build/
 /HW12/firmware/HW12.X/dist/
+/dist/
+/build/
+/HW15/HW7.X/build/
+/HW15/HW7.X/dist/
+/HW15/HW15/build/
+/HW15/HW15/dist/
